# DeNova

./: README.md
Backend/: server.js
Backend/Routes/: AIActionLogRoutes.js  OAuthRoutes.js  PromptNBotRoutes.js  UserRoutes.js  WhatsAppRoutes.js
Backend/Schema/: AIActionLogSchema.js  UserSchema.js  WhatsAppDataSchema.js
Chatbot/: .gitignore  COLOR_SYSTEM.md  package-lock.json  package.json
Chatbot/src/: App.jsx  App.tsx  Appcontext.jsx  main.jsx  vite-env.d.ts
Chatbot/src/components/: AIActionLogs.jsx  AddIntegration.jsx  AddIntegrationDashboard.jsx  AdminPanel.jsx  ChatBot.jsx  ContactModal.jsx  DailyWorkflow.jsx  DiscoverPage.jsx  EmailCatchup.jsx  EmailCatchupDashboard.jsx  EmailIntegration.jsx  HomePage.jsx  LinkedInDashboard.jsx  LinkedInPosting.jsx  LoginModal.jsx  LoginPage.jsx  PayToConnect.jsx  SignupModal.jsx  SignupPage.jsx  TipButton.jsx  TwitterDashboard.jsx  TwitterPosting.jsx  UserVerificationPage.jsx  WhatsAppDashboard.jsx  WhatsAppDashboardRefined.jsx  WhatsAppDashboardSimple.jsx  WhatsAppIntegration.jsx
Chatbot/src/hooks/: useSolana.js
Chatbot/src/services/: ai.jsx  solana.js
Frontend/: package-lock.json
Frontend/src/components/: SignupPage.jsx
Services/MCP/Whatsapp/: ai-enhancement-service.js  package.json  scheduler-service.js  whatsapp-direct.js  whatsapp-server.js  whatsapp-service.js
Services/MCP/email/: ai-email-analyzer.js  email-backend-server.js  unipile-email-service.js
contracts/: Anchor.toml  README.md  chatmate-keypair.json
contracts/programs/chatmate/: Cargo.toml
contracts/programs/chatmate/src/: lib.rs
(+87 files in other folders)
