[package]
name = "chatmate"
version = "0.1.0"
description = "ChatMate - AI Assistant Permission Control & Payments on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chatmate"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = ["anchor-lang/init-if-needed"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
